# rust-tetris

./: .gitignore  Cargo.toml  README.md
src/: config.rs  input.rs  lib.rs  main.rs  renderer.rs
src/game/: board.rs  mod.rs  scoring.rs  state.rs
src/tetromino/: bag.rs  mod.rs  piece.rs  types.rs
