[package]
name = "rust-tetris"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Game Boy-styled Tetris implementation in Rust"
repository = "https://github.com/Floranaras/rust-tetris"
keywords = ["game", "tetris", "gameboy"]
categories = ["games"]

[lib]
name = "rust_tetris"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]  

[[bin]]
name = "rust-tetris"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1  
